@@ -1,3 +1,7 @@
+MJ 24/11/2005
+- Cleaned up some minor type-safety issues in GraphAlgorithms (no behavioral
+  change)
+
 SV 24/11/2005
 - Changed GraphStats to stop calculating average path length, once it is known
   to be infinite (one node is unreachable).
